# archived-cvs-tcs

./: ChangeLog  README.txt  buildInstall.sh  dummy
deja-testsuite/: Makefile  Makefile.in  README  configure  configure.in  dump_gtcs.pl  extractTCS.exp  run_one_test.exp  site.exp
deja-testsuite/testsuite/config/: unix.exp
deja-testsuite/testsuite/config/linux/: script_subst.txt
deja-testsuite/testsuite/config/win32/: script_prologue.sh  script_subst.txt
deja-testsuite/testsuite/isql.test/limit/: isql_limit.exp
deja-testsuite/testsuite/tcs.test/: tcs.exp
deja-testsuite/testsuite/tcs.test/data/global/CF_ISQL/: CF_ISQL.series  CF_ISQL_01.script  CF_ISQL_02.script  CF_ISQL_03.script  CF_ISQL_04.script  CF_ISQL_05.script  CF_ISQL_06.script  CF_ISQL_07.script  CF_ISQL_08.script  CF_ISQL_09.script  CF_ISQL_10.script  CF_ISQL_11.script  CF_ISQL_12.script  CF_ISQL_13.script  CF_ISQL_14.script  CF_ISQL_15.script  CF_ISQL_16.script  CF_ISQL_17.script
deja-testsuite/testsuite/tcs.test/data/global/C_SQL_BLOB/: C_SQL_BLOB.series  C_SQL_BLOB_0.script  C_SQL_BLOB_1.script  C_SQL_BLOB_10.script  C_SQL_BLOB_11.script  C_SQL_BLOB_12.script  C_SQL_BLOB_13.script  C_SQL_BLOB_14.script  C_SQL_BLOB_15.script  C_SQL_BLOB_16.script  C_SQL_BLOB_17.script  C_SQL_BLOB_18.script  C_SQL_BLOB_2.script  C_SQL_BLOB_21.script  C_SQL_BLOB_22.script  C_SQL_BLOB_23.script  C_SQL_BLOB_24.script  C_SQL_BLOB_25.script  C_SQL_BLOB_26.script  C_SQL_BLOB_28.script  C_SQL_BLOB_29.script  C_SQL_BLOB_3.script  C_SQL_BLOB_30.script  C_SQL_BLOB_31.script  C_SQL_BLOB_33.config  C_SQL_BLOB_33.script  C_SQL_BLOB_4.script  C_SQL_BLOB_5.script  C_SQL_BLOB_6.script  C_SQL_BLOB_7.script  C_SQL_BLOB_8.script  C_SQL_BLOB_9.script  C_SQL_CLEANUP.script
deja-testsuite/testsuite/tcs.test/data/global/C_SQL_JOIN/: C_SQL_JOIN.series  C_SQL_JOIN_0.script  C_SQL_JOIN_1.script  C_SQL_JOIN_10.script  C_SQL_JOIN_11.script  C_SQL_JOIN_12.script  C_SQL_JOIN_13.script  C_SQL_JOIN_14.script  C_SQL_JOIN_15.script  C_SQL_JOIN_16.script  C_SQL_JOIN_17.script  C_SQL_JOIN_18.script  C_SQL_JOIN_19.script  C_SQL_JOIN_2.script  C_SQL_JOIN_20.script  C_SQL_JOIN_21.script  C_SQL_JOIN_22.script  C_SQL_JOIN_23.script  C_SQL_JOIN_24.script  C_SQL_JOIN_25.script  C_SQL_JOIN_26.script  C_SQL_JOIN_27.script  C_SQL_JOIN_28.script  C_SQL_JOIN_3.config  C_SQL_JOIN_3.script  C_SQL_JOIN_32.script  C_SQL_JOIN_33.script  C_SQL_JOIN_34.script  C_SQL_JOIN_35.script  C_SQL_JOIN_36.script  C_SQL_JOIN_37.script  C_SQL_JOIN_38.script  C_SQL_JOIN_39.script  C_SQL_JOIN_4.script  C_SQL_JOIN_40.script  C_SQL_JOIN_41.script  C_SQL_JOIN_42.script  C_SQL_JOIN_43.script  C_SQL_JOIN_44.script  C_SQL_JOIN_45.script  (+7 more)
deja-testsuite/testsuite/tcs.test/data/global/C_SQL_PRED/: C_SQL_PRED.series  C_SQL_PRED_0.script  C_SQL_PRED_1.script  C_SQL_PRED_10.script  C_SQL_PRED_11.script  C_SQL_PRED_16.script  C_SQL_PRED_17.script  C_SQL_PRED_18.script  C_SQL_PRED_19.script  C_SQL_PRED_2.script  C_SQL_PRED_21.script  C_SQL_PRED_23.script  C_SQL_PRED_24.script  C_SQL_PRED_25.script  (+53 more)
(+716 files in other folders)
